[gd_scene load_steps=7 format=2]

[ext_resource path="res://player_first_person/player_first_person.gd" type="Script" id=1]
[ext_resource path="res://assets/first_person_HUD/crosshair_needle.png" type="Texture" id=2]
[ext_resource path="res://player_first_person/Crosshair.gd" type="Script" id=3]
[ext_resource path="res://assets/FPS/PPSH/PPSH.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=2]
radius = 0.3

[sub_resource type="RayShape" id=3]
length = 0.2

[node name="Player1P" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionCapsule" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.20042, 0 )
shape = SubResource( 3 )

[node name="CameraPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
current = true
fov = 100.0

[node name="HUD" type="ViewportContainer" parent="CameraPivot/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Crosshair" type="Control" parent="CameraPivot/Camera/HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 3 )
seperation = 20.0

[node name="NeedleUp" type="Sprite" parent="CameraPivot/Camera/HUD/Crosshair"]
position = Vector2( 0, 20 )
texture = ExtResource( 2 )

[node name="NeedleDown" type="Sprite" parent="CameraPivot/Camera/HUD/Crosshair"]
position = Vector2( 0, -20 )
rotation = 3.14159
texture = ExtResource( 2 )

[node name="NeedleRight" type="Sprite" parent="CameraPivot/Camera/HUD/Crosshair"]
position = Vector2( -20, 0 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="NeedleLeft" type="Sprite" parent="CameraPivot/Camera/HUD/Crosshair"]
position = Vector2( 20, 0 )
rotation = -1.5708
texture = ExtResource( 2 )

[node name="PPSH" parent="CameraPivot" instance=ExtResource( 4 )]
transform = Transform( -0.130734, 0, 1.49429, 0, 1.5, 0, -1.49429, 0, -0.130734, 0.4, -0.259, -0.259 )
